effects/coverswitch/coverswitch.cpp
@@ -91,7 +91,7 @@ bool CoverSwitchEffect::supported()
 void CoverSwitchEffect::reconfigure(ReconfigureFlags)
 {
     CoverSwitchConfig::self()->readConfig();
-    animationDuration = animationTime(CoverSwitchConfig::duration());
+    animationDuration = animationTime<CoverSwitchConfig>(200);
     animateSwitch     = CoverSwitchConfig::animateSwitch();
     animateStart      = CoverSwitchConfig::animateStart();
     animateStop       = CoverSwitchConfig::animateStop();
